package fitlogger.musclegroups;

public enum MuscleGroups {
    DELTS,
    PECS,
    FOREARMS,
    UPPER_BACK,
    LOWER_BACK,
    ABS,
    LATS,
    BICEPS,
    TRICEPS,
    TRAPS,
    GLUTES,
    QUADS,
    HAMSTRING,
    CALVES
}
